# llm-zoomcamp-onnx

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: onnx-embedder.ipynb
src/: __init__.py  ingest.py  interfaces.py  llm.py  rag.py
src/embed/: download.py  embedder.py
